--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-.settings
-.vscode
-.classpath
-.project
-target
+# Ignore Gradle project-specific cache directory
 .gradle
+
+# Ignore Gradle build output directory
 build
-gradle/
-solution
+/target/
